# cbase

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  cbase.1  cbase.c  config.h.in  configure  configure.ac
dev/: build-pkg.sh  chver.sh  control  manpages  rules
src/: Makefile  Makefile.am  Makefile.in  cbase.c
